Fixe spacing of header

--- a/web/homepage.css
+++ b/web/homepage.css
@@ -7,7 +7,8 @@ div {
 }
 
 h1 {
-	margin-top: 0px;
+	margin: 0px;
+	padding: 0px;
 }
 
 h2 {
